# MagiQt

./: .gitignore  LICENSE  README.md  REAMDE.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
examples/readme/: readme.py
src/magiqt/: application.py  interface.py  main.py
src/magiqt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/magiqt/field/: fields.py  range.py  validator.py
src/magiqt/layout_manager/: form.py
src/magiqt/widgets/: group_box.py  label.py
src/magiqt/widgets/input/: abstract.py  combo_box.py  line_edit.py  wrappers.py
src/unit_system/: __init__.py  abstract.py  quantity.py  unit.py
tests/: test_smth.py
