[metadata]
name = magiqt
description = Declarative Qt interface
author = Markku Kakko
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    magiqt
install_requires =
    PyQt5==5.15.2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    pylint
    tox>=3.24
    PyQt5-stubs==5.14.2.2

[options.package_data]
magiqt = py.typed

